# waver

./: LICENSE  README.md  codecov.yml  setup.cfg  setup.py  tox.ini
.napari/: config.yml
docs/: conf.py  index.rst
examples/: inversion_train_simple.py  lightning_datamodule_simple.py  load_dataset_simple.py  make_dataset_simple.py  make_dataset_simple_custom.py  reconstruct_dataset_simple.py  simple.py  simple_1D_point_source_object.py  simple_1D_point_source_object_edge.py  simple_1D_point_source_object_edge2.py  simple_line_source.py  simple_point_source.py  simple_point_source_object.py  torch_dataset_simple.py
examples/1D/: point_source.py  point_source_object.py  point_source_object_ds.py  point_source_object_ds2.py  point_source_object_edge.py  point_source_object_edge_2.py
examples/2D/: line_source.py  line_source_object.py  point_source.py  point_source_object.py  point_source_object_ds.py
examples/3D/: point_source.py
examples/datasets/: load_dataset_simple.py  make_1D_array.py  make_1D_simple.py  make_2D_array.py  make_2D_simple.py  make_dataset_array.py  make_dataset_array_1D.py  make_dataset_simple.py  make_dataset_simple_1D.py  make_dataset_simple_1D_one_side.py  make_dataset_simple_2D.py  make_dataset_simple_custom.py
examples/sampling/: fourier_method.py
waver/: __init__.py  _dock_widget.py  _reader.py
waver/_tests/: test_dock_widget.py
waver/components/: _grid.py  _source.py  _time.py  _utils.py  _wave.py  simulation.py
waver/datasets/: __init__.py  _generator.py  _loader.py  _utils.py  _visualize.py
waver/inversion/: _data_module.py  (+2 more)
(+19 files in other folders)
