[metadata]
name = waver
author = Nicholas Sofroniew
author_email = sofroniewn@gmail.com
license = BSD-3
url = https://github.com/sofroniewn/waver
description = Wave simulations
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    magicgui>0.2.10
    napari>0.4.10
    napari-plugin-engine>=0.1.4
    numpy
    zarr


[options.entry_points] 
napari.plugin = 
    waver = waver
